# SPHERE-MS

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  run_model.py  train_model.py  train_msg.py
data/inchi/: inchikey.py
data/trained_SPHEREMS/: hparams.yaml
demo/: demo_input.csv  demo_out.msp
src/: MS_chem.py  Model.py  definition.py  encoding.py  modules.py  similarity.py  utils.py
