[project]
name = "sphere-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.6.1",
    "massspecgym",
    "pandarallel>=1.6.5",
]

[tool.uv.sources]
massspecgym = { git = "https://github.com/pluskal-lab/MassSpecGym" }

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
